fix input box scrollbar

--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -1,66 +1,70 @@
 
 [data-joy-color-scheme="dark"] {
-  .scroll::-webkit-scrollbar {
-    width: 5px;
-    background-color: transparent;
-    border-radius: 6px;
-  }
+  .scroll, textarea {
+    &::-webkit-scrollbar {
+      width: 6px;
+      background-color: transparent;
+      border-radius: 6px;
+    }
 
-  .scroll::scrollbar {
-    width: 5px;
-    background-color: #000;
-    border-radius: 6px;
-  }
+    &::scrollbar {
+      width: 6px;
+      background-color: #ffffff88;
+      border-radius: 3px;
+    }
 
-  .scroll::-webkit-scrollbar-thumb {
-    background-color: #000;
-    border-radius: 6px;
-  }
+    &::-webkit-scrollbar-thumb {
+      background-color: #000;
+      border-radius: 3px;
+    }
 
-  .scroll::-webkit-scrollbar-thumb:hover {
-    background-color: #000;
-  }
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: #000;
+    }
 
-  .scroll::-webkit-scrollbar-track {
-    background-color: transparent;
-    border-radius: 6px;
-  }
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+      border-radius: 3px;
+    }
 
-  .scroll::-webkit-scrollbar-track:hover {
-    background-color: transparent;
-  }
+    &::-webkit-scrollbar-track:hover {
+      background-color: transparent;
+    }
 
-  .scroll::-webkit-scrollbar-button {
-    display: none;
+    &::-webkit-scrollbar-button {
+      display: none;
+    }
   }
 }
 
 [data-joy-color-scheme="light"] {
-  .scroll::-webkit-scrollbar {
-    width: 5px;
-    background-color: #f5f5f5;
-    border-radius: 6px;
-  }
+  .scroll, textarea {
+    &::-webkit-scrollbar {
+      width: 6px;
+      background-color: #f5f5f5;
+      border-radius: 3px;
+    }
 
-  .scroll::-webkit-scrollbar-thumb {
-    background-color: #c6c6c6;
-    border-radius: 6px;
-  }
+    &::-webkit-scrollbar-thumb {
+      background-color: #c6c6c6;
+      border-radius: 3px;
+    }
 
-  .scroll::-webkit-scrollbar-thumb:hover {
-    background-color: #a0a0a0;
-  }
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: #a0a0a0;
+    }
 
-  .scroll::-webkit-scrollbar-track {
-    background-color: #f5f5f5;
-    border-radius: 6px;
-  }
+    &::-webkit-scrollbar-track {
+      background-color: #f5f5f5;
+      border-radius: 3px;
+    }
 
-  .scroll::-webkit-scrollbar-track:hover {
-    background-color: #dcdcdc;
-  }
+    &::-webkit-scrollbar-track:hover {
+      background-color: #dcdcdc;
+    }
 
-  .scroll::-webkit-scrollbar-button {
-    display: none;
+    &::-webkit-scrollbar-button {
+      display: none;
+    }
   }
 }
